# myaiserv

./: .env.example  .flake8  .gitignore  .justfile  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  README.md  README_ru.md  README_zh.md  TECHNICAL_ARCHITECTURE.md  alembic.ini  docker-compose.yml  extract_r2r_documentation.py  justfile  logging.conf  pyproject.toml  requirements.txt  smithery.yaml
alembic/: env.py
app/: database.py  main.py
app/core/: __init__.py  base_mcp.py  base_prompts.py  base_resources.py  base_sampling.py
app/models/: account.py  graphql.py  mcp.py  user.py
app/resources/: resources.py
app/services/: mcp_service.py
app/storage/: base.py  elasticsearch.py  redis.py
app/tools/: __init__.py  example_prompts.py  example_resources.py  example_tool.py
app/utils/: embeddings.py  prompt_loader.py
config/elasticsearch/: elasticsearch.yml
config/prometheus/: exporters.yml  prometheus.yml
docs/: ARCHITECTURE.md  DATABASE_ANALYSIS.md  MCP_API.md  MCP_DOCUMENTATION.md  MCP_IMPLEMENTATION_CHECKLIST.md  PROJECT_STRUCTURE.md  README.md  REFACTORING.md  api.json  schema.json
scripts/: check_environment.sh  clean.sh  db_migrations.sh  dev.sh  fix_init_annotations.py  fix_type_annotations.py  format_code.sh  install.sh  lint.sh  manage_storage.py  migrate_structure.py  restructure_project.py  run.sh  run_restructure.sh  security.sh  seed_resources.py  setup_structure.py  test.sh  test_coverage.sh  typecheck.sh  update_imports.py  update_tests.py
test/: README.md  docker-compose.yml  test_mcp.py
(+10 files in other folders)
