[tool.poetry]
name = "myaiserv"
version = "0.1.0"
description = "AI Service with monitoring"
authors = ["Your Name <your.email@example.com>"]

packages = [{ include = "app/" }]


[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
sqlalchemy = "^2.0.23"
asyncpg = "^0.29.0"
prometheus-fastapi-instrumentator = "^6.1.0"
elasticsearch = "^8.11.0"
kafka-python = "^2.0.2"
websockets = "^12.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
